--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" sizes="256x256" href="/matex-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Matex - Founded by Mohammad ALMESTRAH</title>
     <meta name="description" content="Leading AI and software solutions company founded by Mohammad ALMESTRAH, delivering innovative technology solutions for business transformation." />
